fix alignment of hamburger menu

--- a/responsive.css
+++ b/responsive.css
@@ -32,6 +32,7 @@
 		display: inline-block;
 		position: absolute;
 		right: 5px;
+		top: -5px;
 	}
 
 	nav {
